2009-04-24  Bruno Haible  <bruno@clisp.org>

	* gnulib-m4/gnulib-cache.m4: Updated by gnulib-tool.

2009-04-24  Bruno Haible  <bruno@clisp.org>

	Make the installed package relocatable.
	* autogen.sh (GNULIB_MODULES): Add relocatable-lib-lgpl.
	* lib/Makefile.am (AM_CPPFLAGS): Add DEPENDS_ON_LIBICONV definition.

2009-04-23  Bruno Haible  <bruno@clisp.org>

	Fix recognition of "nm" command.
	* m4/libtool.m4 (LT_PATH_NM): Try "nm" program also when compiling for
	mingw in a cygwin environment.

2009-04-23  Bruno Haible  <bruno@clisp.org>

	* m4/libtool.m4: Fix recognition of 'link' command.
	2009-01-26  Peter Rosin  <peda@lysator.liu.se>
		Don't settle for any dumpbin/link program as name lister.
		* m4/libtool.m4 (LT_PATH_NM): When locating dumpbin or
		link -dump, check if they appear to really be capable of name
		listing, in order to eliminate e.g. link from coreutils. This
		makes the name lister decision fall back on nm as the default
		if no acceptable candidate is found, which mainly happens on
		(arguably broken) cross compiles.

2008-04-21  Bruno Haible  <bruno@clisp.org>

	Add version metainformation in Windows resource format.
	* configure.ac: Invoke LT_LANG for Windows Resources.
	(WOE32): New conditional.
	* lib/libunistring.rc: New file.
	* lib/Makefile.am (EXTRA_DIST): Add it.
	(WOE32_LIBADD): New variable.
	(libunistring.res.lo): New rule.
	(libunistring_la_LIBADD, libunistring_la_DEPENDENCIES): Add
	WOE32_LIBADD.
	(config.h): Don't compile *.res.c files.
	* build-aux/windres-options: New file, from GNU gettext.
	* Makefile.am (EXTRA_DIST): Add it.

2008-04-21  Bruno Haible  <bruno@clisp.org>

	Add version metainformation.
	* configure.ac (AC_CONFIG_SRCDIR): Use lib/unistring/version.in.h.
	(HEXVERSION): New variable, computed from VERSION.
	(AC_CONFIG_FILES): Add lib/unistring/version.h.
	* lib/unistring/version.in.h: New file.
	* lib/version.c: New file.
	* lib/Makefile.am (libunistring_la_SOURCES): Add version.c.